Fixed overlapp issue

--- a/global.css
+++ b/global.css
@@ -1,4 +1,4 @@
-﻿@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=League+Spartan:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=League+Spartan:wght@100..900&display=swap');
 
 
 
@@ -269,9 +269,7 @@ button.white .ripple-effect {
 
 #top {
     pointer-events: none;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     width: 100%;
     height: 100vh;
 }
