--- a/index.css
+++ b/index.css
@@ -582,6 +582,7 @@
                     width: 100% !important;
                     box-sizing: border-box !important;
                     overflow: hidden !important;
+                    
                 }
             }
 
@@ -607,4 +608,8 @@
                 right: 10px;
             }
         }
+
+#feature {
+    margin-top: 60px !important;
+}
 
